[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orcaslicer_plugin_spoolman"
version = "1.0.0"
description = "Integrates OrcaSlicer with self-hosted Spoolman."
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Zao Soula" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
]

[tool.setuptools]
packages = ["orcaslicer_plugin_spoolman"]
